# Timr

./: .gitignore  Cargo.toml  README.md  data.txt  timr copy.json  timr.json
src/: lib.rs  main.rs  parse.rs  task.rs
src/Util/: mod.rs  parser.rs  tasks.rs  utility.rs
