[package]
name = "cli-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env = "0.0.0"
chrono = "0.4.19"
serde = { version = "1.0.136", features = ["derive"] }
clap = {version = "4.4.2", features = ["derive", "cargo"]}
anyhow = "1.0.75"
serde_json = "1.0.105"
